k8s/python-ml.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-ml
  namespace: moodtracker
spec:
  selector:
    app: python-ml
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-ml
  namespace: moodtracker
spec:
  replicas: 2      # 업데이트 중에도 무중단에 유리
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1   # 새 파드를 최대 1개 더 띄움
      maxUnavailable: 0   # 기존 파드는 0개만 다운 -> 완전 무중단
  selector:
    matchLabels:
      app: python-ml
  template:
    metadata:
      labels:
        app: python-ml
    spec:
      containers:
        - name: python-ml
          image: 2with13/cloud-python-ml:1.0.7
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
                cpu: "2"
                memory: "4Gi"
